--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   "dependencies": {
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
-    "lucide-react": "^0.562.0",
-    "qrcode.react": "^4.2.0",
+    "lucide-react": "0.460.0",
+    "qrcode.react": "4.1.0",
     "xlsx": "0.18.5",
     "firebase": "^12.7.0"
   },
