--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.2.3",
-    "react-dom": "^19.2.3",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "lucide-react": "0.460.0",
     "qrcode.react": "4.1.0",
     "xlsx": "0.18.5",
+    "@supabase/supabase-js": "2.47.10",
     "firebase": "^12.7.0"
   },
   "devDependencies": {
